syntax="proto3";
package employee;

message Login{
  string name=1;
  string password=2;
}
message LoginResponse{
  string jwt=1;
}