syntax="proto3";
package employee;

enum UserRoles{
  ADMIN=0;
  USER=1;
}